==> gimasi/osG/board/NXP/MK28FN2M0VMI15/src/drivers/board-I2cSupport.c <==
#include "board-I2cSupport.h"
#define TOT_I2C FSL_FEATURE_SOC_I2C_COUNT

bool _osg_board_I2c_validatePins(const osg_I2cId i2cId, const osg_GpioId sda, const osg_GpioId scl)
{
    switch (i2cId)
    {
#ifdef I2C0
        case OSG_I2C0:
        {
            if (sda == OSG_GPIO_PE18
                || sda == OSG_GPIO_PA21
                || sda == OSG_GPIO_PB1
                || sda == OSG_GPIO_PB3
                || sda == OSG_GPIO_PD3
                || sda == OSG_GPIO_PD9)
            {
                if (scl == OSG_GPIO_PE19
                    || scl == OSG_GPIO_PA20
                    || scl == OSG_GPIO_PB0
                    || scl == OSG_GPIO_PB2
                    || scl == OSG_GPIO_PD2
                    || scl == OSG_GPIO_PD8)
                {
                    return true;
                }
            }

            break;
        }
#endif
#ifdef I2C1
        case OSG_I2C1:
        {
            if (sda == OSG_GPIO_PE0
                || sda == OSG_GPIO_PA9
                || sda == OSG_GPIO_PC11)
            {
                if (scl == OSG_GPIO_PE1
                    || scl == OSG_GPIO_PA8
                    || scl == OSG_GPIO_PC10)
                {
                    return true;
                }
            }

            break;
        }
#endif
#ifdef I2C2
        case OSG_I2C2:
        {
            if (sda == OSG_GPIO_PE22
                || sda == OSG_GPIO_PA7
                || sda == OSG_GPIO_PA10
                || sda == OSG_GPIO_PB11)
            {
                if (scl == OSG_GPIO_PE23
                    || scl == OSG_GPIO_PA6
                    || scl == OSG_GPIO_PA11
                    || scl == OSG_GPIO_PB10)
                {
                    return true;
                }
            }

            break;
        }
#endif
#ifdef I2C3
        case OSG_I2C3:
        {
            if (sda == OSG_GPIO_PE10
                || sda == OSG_GPIO_PA1
                || sda == OSG_GPIO_PA30
                || sda == OSG_GPIO_PC28)
            {
                if (scl == OSG_GPIO_PE11
                    || scl == OSG_GPIO_PA2
                    || scl == OSG_GPIO_PA31
                    || scl == OSG_GPIO_PC29)
                {
                    return true;
                }
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

i2c_slave_address_mode_t _osg_board_I2c_decodeAddressingMode(const osg_I2cAddressingMode addrMode)
{
    switch (addrMode)
    {
        case OSG_I2C_7BIT_ADDRESS:
            return kI2C_Address7bit;
        case OSG_I2C_10BIT_ADDRESS:
            return kI2C_RangeMatch;
        default:
            osg_error("ERROR: Invalid addressing mode");
    }

    // suppress warning
    return kI2C_Address7bit;
}

void _osg_board_I2c_doBufferedSend(osg_I2cImpl * i2c, const osg_I2cMode mode)
{
    if (osg_CircularFifo_isEmpty(&i2c->txFifo)) return;
    const osg_I2cFlags restore = i2c->flags;
    i2c->flags &= ~OSG_I2C_FLAG_IS_NB_SEND;
    i2c->flags |= OSG_I2C_FLAG_IS_SEND;
    void * buffer = NULL;
    Size size = 0;
    osg_CircularFifo_getFilledBuffer(&i2c->txFifo, &buffer, &size);

    osg_board_I2cHandler * handle = _osg_board_I2c_getI2cHandlerByInstance(i2c->handler);
    status_t ok;

    if (mode == OSG_I2C_MASTER_MODE)
    {
        i2c_master_transfer_t masterXfer;
        masterXfer.slaveAddress = i2c->slaveAddress;
        masterXfer.direction = kI2C_Write;
        masterXfer.subaddress = 0;
        masterXfer.subaddressSize = 0;
        masterXfer.data = (void *)buffer;
        masterXfer.dataSize = size;
        masterXfer.flags = kI2C_TransferDefaultFlag;

        I2C_MasterTransferCreateHandle((osg_board_I2cInstance *)i2c->handler,
                                       &handle->masterHandle,
                                       _osg_board_I2c_masterSendCallback,
                                       NULL);

        ok = I2C_MasterTransferNonBlocking((osg_board_I2cInstance *)i2c->handler, &handle->masterHandle, &masterXfer);
    }
    else
    {
        nbXfer.data = buffer;
        nbXfer.dataSize = size;

        I2C_SlaveTransferCreateHandle((osg_board_I2cInstance *)i2c->handler,
                                      &handle->slaveHandle,
                                      _osg_board_I2c_slaveSendRecvCallback,
                                      &nbXfer);
        ok = I2C_SlaveTransferNonBlocking((osg_board_I2cInstance *)i2c->handler, &handle->slaveHandle, kI2C_SlaveAllEvents);
    }


    if (ok != kStatus_Success) i2c->flags = restore;
}

void _osg_board_I2c_doBufferedReceive(osg_I2cImpl * i2c, const osg_I2cMode mode)
{
    if (osg_CircularFifo_isNull(&i2c->rxFifo)
            || !(i2c->flags & OSG_I2C_FLAG_RX_BUFF_ENABLED))
        return;
    
    const osg_I2cFlags restore = i2c->flags;
    i2c->flags &= ~OSG_I2C_FLAG_IS_NB_RECEIVE;
    i2c->flags |= OSG_I2C_FLAG_IS_RECEIVE;

    osg_board_I2cHandler * handle = _osg_board_I2c_getI2cHandlerByInstance(i2c->handler);
    status_t ok;

    if (mode == OSG_I2C_MASTER_MODE)
    {
        i2c_master_transfer_t masterXfer;
        masterXfer.slaveAddress = i2c->slaveAddress;
        masterXfer.direction = kI2C_Read;
        masterXfer.subaddress = 0;
        masterXfer.subaddressSize = 0;
        masterXfer.data = &i2c->rxByte;
        masterXfer.dataSize = 1;
        masterXfer.flags = kI2C_TransferDefaultFlag;

        I2C_MasterTransferCreateHandle((osg_board_I2cInstance *)i2c->handler,
                                       &handle->masterHandle,
                                       _osg_board_I2c_masterRecvCallback,
                                       NULL);
        ok = I2C_MasterTransferNonBlocking((osg_board_I2cInstance *)i2c->handler, &handle->masterHandle, &masterXfer);
    }
    else
    {
        nbXfer.data = &i2c->rxByte;
        nbXfer.dataSize = 1;

        I2C_SlaveTransferCreateHandle((osg_board_I2cInstance *)i2c->handler,
                                      &handle->slaveHandle,
                                      _osg_board_I2c_slaveSendRecvCallback,
                                      &nbXfer);
        ok = I2C_SlaveTransferNonBlocking((osg_board_I2cInstance *)i2c->handler, &handle->slaveHandle, kI2C_SlaveAllEvents);
    }

    if (ok != kStatus_Success) i2c->flags = restore;
}
