==> gimasi/osG/board/STM32/L4R5/src/drivers/board-I2cSupport.c <==
#include "board-I2cSupport.h"
#define COUNT_I2C0 1
#define COUNT_I2C0 0
#define COUNT_I2C1 1
#define COUNT_I2C1 0
#define COUNT_I2C2 1
#define COUNT_I2C2 0
#define COUNT_I2C3 1
#define COUNT_I2C3 0
#define COUNT_I2C4 1
#define COUNT_I2C4 0
#define TOT_I2C (COUNT_I2C0 + COUNT_I2C1 + COUNT_I2C2 + COUNT_I2C3 + COUNT_I2C4)

bool _osg_board_I2c_validatePins(const osg_I2cId i2cId, const osg_GpioId sda, const osg_GpioId scl)
{
    switch (i2cId)
    {
#ifdef I2C1
        case OSG_I2C1:
        {
            if (sda == OSG_GPIO_PB7
                || sda == OSG_GPIO_PB9
                || sda == OSG_GPIO_PG13)
            {
                if (scl == OSG_GPIO_PB6
                    || scl == OSG_GPIO_PB8
                    || scl == OSG_GPIO_PG14)
                {
                    return true;
                }
            }

            break;
        }
#endif
#ifdef I2C2
        case OSG_I2C2:
        {
            if (sda == OSG_GPIO_PB11
                || sda == OSG_GPIO_PB14
                || sda == OSG_GPIO_PF0
                || sda == OSG_GPIO_PH5)
            {
                if (scl == OSG_GPIO_PB10
                    || scl == OSG_GPIO_PB13
                    || scl == OSG_GPIO_PF1
                    || scl == OSG_GPIO_PH4)
                {
                    return true;
                }
            }

            break;
        }
#endif
#ifdef I2C3
        case OSG_I2C3:
        {
            if (sda == OSG_GPIO_PB4
                || sda == OSG_GPIO_PC1
                || sda == OSG_GPIO_PC9
                || sda == OSG_GPIO_PG8
                || sda == OSG_GPIO_PH8)
            {
                if (scl == OSG_GPIO_PA7
                    || scl == OSG_GPIO_PC0
                    || scl == OSG_GPIO_PG7
                    || scl == OSG_GPIO_PH7)
                {
                    return true;
                }
            }

            break;
        }
#endif
#ifdef I2C4
        case OSG_I2C4:
        {
            if (sda == OSG_GPIO_PB7
                || sda == OSG_GPIO_PB11
                || sda == OSG_GPIO_PD13
                || sda == OSG_GPIO_PF15)
            {
                if (scl == OSG_GPIO_PB6
                    || scl == OSG_GPIO_PB10
                    || scl == OSG_GPIO_PD12
                    || scl == OSG_GPIO_PF14)
                {
                    return true;
                }
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

uint32_t _osg_board_I2c_decodeAddressingMode(const osg_I2cAddressingMode addrMode)
{
    switch (addrMode)
    {
        case OSG_I2C_7BIT_ADDRESS:
            return I2C_ADDRESSINGMODE_7BIT;
        case OSG_I2C_10BIT_ADDRESS:
            return I2C_ADDRESSINGMODE_10BIT;
        default:
            osg_error("ERROR: Invalid addressing mode");
    }

    // suppress warning
    return 0;
}

void _osg_board_I2c_doBufferedSend(osg_I2cImpl * i2c, const osg_I2cMode mode)
{
    if (osg_CircularFifo_isEmpty(&i2c->txFifo)) return;
    const osg_I2cFlags restore = i2c->flags;
    i2c->flags &= ~OSG_I2C_FLAG_IS_NB_SEND;
    i2c->flags |= OSG_I2C_FLAG_IS_SEND;
    void * buffer = NULL;
    Size size = 0;
    osg_CircularFifo_getFilledBuffer(&i2c->txFifo, &buffer, &size);

    osg_board_I2cHandler * handler = (osg_board_I2cHandler *)i2c->handler;
    HAL_StatusTypeDef ok;
    if (mode == OSG_I2C_MASTER_MODE)
        ok = HAL_I2C_Master_Transmit_IT(handler, (i2c->slaveAddress << 1), (uint8_t *)buffer, (uint16_t)size);
    else
        ok = HAL_I2C_Slave_Transmit_IT(handler, (uint8_t *)buffer, (uint16_t)size);


    if (ok != HAL_OK) i2c->flags = restore;
}

void _osg_board_I2c_doBufferedReceive(osg_I2cImpl * i2c, const osg_I2cMode mode)
{
    if (osg_CircularFifo_isNull(&i2c->rxFifo)
            || !(i2c->flags & OSG_I2C_FLAG_RX_BUFF_ENABLED))
        return;
    const osg_I2cFlags restore = i2c->flags;
    i2c->flags &= ~OSG_I2C_FLAG_IS_NB_RECEIVE;
    i2c->flags |= OSG_I2C_FLAG_IS_RECEIVE;

    osg_board_I2cHandler * handler = (osg_board_I2cHandler *)i2c->handler;
    HAL_StatusTypeDef ok;
    if (mode == OSG_I2C_MASTER_MODE)
        ok = HAL_I2C_Master_Receive_IT(handler, (i2c->slaveAddress << 1), &i2c->rxByte, 1);
    else
        ok = HAL_I2C_Slave_Receive_IT(handler, &i2c->rxByte, 1);

    if (ok != HAL_OK) i2c->flags = restore;
}
